# pymatching

./: pyproject.toml  tox.ini
pymatching/: __init__.py  fuzzymatch.py  hamming.py  jaccard.py  levenshtein.py  overlap.py  sequencematch.py  sorensendice.py  trie.py  word2vec.py
pymatching/measures/: __init__.py  metric.py  ratio.py
tests/: test_fuzzymatch.py  test_hamming.py  test_jaccard.py  test_levenshtein.py  test_pymatching.py  test_sequencematch.py  test_sorensendice.py  test_word2vec.py  util.py
