[tool.poetry]
name = 'pymatching'
version = '0.0.1'
description = ''
authors = ['Zain Aamer <ZippeyKeys12@gmail.com>']

[tool.poetry.dependencies]
python = '^3.7'
numpy = '^1.18.4'
spacy = '^2.3.1'
numba = '^0.49.0'

[tool.poetry.dependencies.en-core-web-md]
url = 'https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.3.1/en_core_web_md-2.3.1.tar.gz'

[tool.poetry.dev-dependencies]
flake8 = '^3.7.9'
mypy = '^0.770'
flake8-mypy = '^17.8.0'
autopep8 = '^1.5.2'
pytest = '^5.2'
tox = '^3.15.0'
pytest-benchmark = '^3.2.3'
pytest-parallel = '^0.1.0'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
